--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -19,17 +19,17 @@
       	<p>A fast, fluent, light weight music player written in GTK4, with a beautiful, adaptive user interface, so named G4Music. It is also focusing on high performance, for those people who has large number of songs.</p>
         <p>Features</p>
         <ul>
-        <li>Supports most music file types, samba and any other remote protocols (thanks to great GIO and GStreamer).</li>
+        <li>Supports most music file types, samba and any other remote protocols (depends on GIO and GStreamer).</li>
         <li>Fast loading and parsing thousands of music files in very few seconds, monitor local changes.</li>
         <li>Low memory usage for huge playlist with album covers, no thumbnail caches to store.</li>
-        <li>Sorts by album/artist/title or shuffle, supports full-text searching.</li>
-        <li>Supports embedded album art or external images as album cover, embedded can be exported.</li>
-        <li>Gaussian blurred cover as window background, follows GNOME 42 light/dark mode.</li>
-        <li>Supports drag-drop from GNOME Files, showing music in Files.</li>
+        <li>Sorts by album/artist/title and shuffle, full-text searching.</li>
+        <li>Supports embedded album art and external album cover.</li>
+        <li>Gaussian blurred cover as background, follows GNOME light/dark mode.</li>
+        <li>Drag-drop from GNOME Files, showing music in Files.</li>
         <li>Supports audio peaks visualizer.</li>
         <li>Supports gapless playback.</li>
-        <li>Supports ReplayGain track mode.</li>
-        <li>Supports pipewire audio sink.</li>
+        <li>Supports normalizing volume with ReplayGain.</li>
+        <li>Supports pipewire and other audio sink.</li>
         <li>Supports MPRIS control.</li>
         <li>Less than 500KB to install.</li>
         </ul>
