refactor: split the window into 2 panels

--- a/src/meson.build
+++ b/src/meson.build
@@ -11,7 +11,9 @@ sources = [
   'ui/paintables.vala',
   'ui/peak-bar.vala',
   'ui/play-bar.vala',
+  'ui/play-panel.vala',
   'ui/preferences.vala',
+  'ui/store-panel.vala',
   'ui/volume-button.vala',
   'ui/window.vala',
   'utils/async-task.vala',
