group artists and albums when loading files

--- a/src/meson.build
+++ b/src/meson.build
@@ -24,6 +24,7 @@ sources = [
   'utils/dir-monitor.vala',
   'utils/mpris.vala',
   'utils/music.vala',
+  'utils/music-library.vala',
   'utils/music-store.vala',
   'utils/playlist-file.vala',
   'utils/portal.vala',
