refactor 3 tab pages: all music, artists, albums

--- a/src/meson.build
+++ b/src/meson.build
@@ -7,9 +7,9 @@ sources = [
   'gst/gst-player.vala',
   'gst/peak-calculator.vala',
   'gst/tag-parser.vala',
-  'ui/library-page.vala',
   'ui/mini-bar.vala',
   'ui/music-entry.vala',
+  'ui/music-list.vala',
   'ui/paintables.vala',
   'ui/peak-bar.vala',
   'ui/play-bar.vala',
