--- a/src/meson.build
+++ b/src/meson.build
@@ -9,8 +9,8 @@ sources = [
   'gst/peak-calculator.vala',
   'gst/tag-parser.vala',
   'ui/mini-bar.vala',
-  'ui/music-entry.vala',
   'ui/music-list.vala',
+  'ui/music-widgets.vala',
   'ui/paintables.vala',
   'ui/peak-bar.vala',
   'ui/play-bar.vala',
