--- a/src/meson.build
+++ b/src/meson.build
@@ -28,7 +28,7 @@ sources = [
   'utils/mpris.vala',
   'utils/music.vala',
   'utils/music-library.vala',
-  'utils/music-store.vala',
+  'utils/music-loader.vala',
   'utils/playlist-file.vala',
   'utils/portal.vala',
   'utils/tag-cache.vala',
