--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -16,12 +16,12 @@
     <content_rating type="oars-1.1"/>
 
     <description>
-      	<p>G4Music is a fast fluent lightweight music player written in GTK4, with a beautiful and adaptive user interface, focuses on high performance for huge number of songs.</p>
+      	<p>G4Music is a fast fluent lightweight music player written in GTK4, with a beautiful and adaptive user interface, focuses on high performance for large music collection.</p>
         <p>Features</p>
         <ul>
         <li>Supports most music file types, samba and any other remote protocols (depends on GIO and GStreamer).</li>
         <li>Fast loading and parsing thousands of music files in very few seconds, monitor local changes.</li>
-        <li>Low memory usage for huge playlist with album covers (embedded and external), no thumbnail caches to store.</li>
+        <li>Low memory usage for large music collection with album covers (embedded and external), no thumbnail caches to store.</li>
         <li>Group and sorts by album/artist/title, shuffle list, full-text searching.</li>
         <li>Gaussian blurred cover as background, follows GNOME light/dark mode.</li>
         <li>Drag-drop from GNOME Files, showing music in Files.</li>
