--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -24,6 +24,7 @@
         <li>Fast loading and parsing thousands of music files in very few seconds, monitor local changes.</li>
         <li>Low memory usage for large music collection with album covers (embedded and external), no thumbnail caches to store.</li>
         <li>Group and sorts by album/artist/title, shuffle list, full-text searching.</li>
+        <li>Adaptive user interface for different screen (Desktop, Tablet, Mobile).</li>
         <li>Gaussian blurred cover as background, follows GNOME light/dark mode.</li>
         <li>Drag-drop from GNOME Files, showing music in Files.</li>
         <li>Supports audio peaks visualizer.</li>
@@ -31,7 +32,6 @@
         <li>Supports normalizing volume with ReplayGain.</li>
         <li>Supports pipewire and other audio sink.</li>
         <li>Supports MPRIS control.</li>
-        <li>Less than 500KB to install.</li>
         </ul>
     </description>
 
