--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop-application">
     <id>@app_id@</id>
-    <name>G4Music</name>
+    <name>Gapless</name>
     <metadata_license>CC0-1.0</metadata_license>
     <project_license>GPL-3.0-or-later</project_license>
     <summary>Play your music elegantly</summary>
@@ -17,14 +17,14 @@
     <content_rating type="oars-1.1"/>
 
     <description>
-      	<p>G4Music is a fast fluent lightweight music player written in GTK4, with a beautiful and adaptive user interface, focuses on high performance for large music collection.</p>
+      	<p>Gapless (AKA: G4Music) is a light weight music player written in GTK4, focuses on large music collection.</p>
         <p>Features</p>
         <ul>
         <li>Supports most music file types, samba and any other remote protocols (depends on GIO and GStreamer).</li>
         <li>Fast loading and parsing thousands of music files in very few seconds, monitor local changes.</li>
         <li>Low memory usage for large music collection with album covers (embedded and external), no thumbnail caches to store.</li>
         <li>Group and sorts by album/artist/title, shuffle list, full-text searching.</li>
-        <li>Adaptive user interface for different screen (Desktop, Tablet, Mobile).</li>
+        <li>Fluent adaptive user interface for different screen (Desktop, Tablet, Mobile).</li>
         <li>Gaussian blurred cover as background, follows GNOME light/dark mode.</li>
         <li>Drag-drop from GNOME Files, showing music in Files.</li>
         <li>Supports audio peaks visualizer.</li>
