use Adw.NavigationView if libadwaita>=1.4

--- a/meson.build
+++ b/meson.build
@@ -25,6 +25,9 @@ adw_dep = dependency('libadwaita-1')
 if adw_dep.version().version_compare('>=1.2.0')
   add_project_arguments('--define=ADW_1_2', language: 'vala')
 endif
+if adw_dep.version().version_compare('>=1.4.0')
+  add_project_arguments('--define=ADW_1_4', language: 'vala')
+endif
 
 libm_dep = c_compiler.find_library('m', required: false)
 posix_dep = vala_compiler.find_library('posix', required: false)
